# open-space

./: .ai-fs-permissions.yaml  .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  cspell.json
.cargo-husky/hooks/: pre-commit  pre-push
.centy/: .centy-manifest.json  config.json
.centy/archived/: config.yaml
.centy/docs/: camera-sync-imu-open-space-vs-spatial-display.md  config.yaml
.centy/issues/: 0acc814a-ccf5-4c37-987f-78ecbc59c803.md  1baf87a7-1671-4144-a2c2-623df20d6879.md  1c66541b-6022-40b1-ae88-d66958f91438.md  22ea6078-56e0-4109-840d-0537f10277f3.md  45ab79be-88d4-4cbc-bbab-90d58568025f.md  475a2266-0e6a-4e76-ad7e-0dc83b9c6c23.md  4782ef80-6f16-44a0-828a-ac6174f1c024.md  49826bcd-8ff8-4b37-8f46-29416194bdc9.md  4ffd4b38-774e-4124-908d-a3c05700d8de.md  53b00df5-7108-41a1-8cff-ab17765201d1.md  74a31c4a-2933-4089-b460-46a1260f398a.md  7c5d3a9c-e4bc-4b86-8c09-4a1efc818887.md  92cd7c9b-63d8-412f-a8a5-a7a6cdc4e6ee.md  a94d0988-1cff-44fc-83d4-3f2e1bfa01ab.md  b9be9360-1b37-4201-b79e-10004a6d1bf5.md  bbfe1837-a485-4ddd-be68-f659e8e047b0.md  c851b9b4-7729-4f9b-8600-d7b93c94a9d0.md  cfe811d5-5bc8-4b4b-9281-89748384738a.md  config.yaml  d300af02-7c1a-4a69-936b-e5fc044eee66.md  e067595d-af5d-46e8-bbeb-34e600cf2c8c.md  eaea1cec-b8c6-4184-b616-ab3fa38940e3.md  f1d92b74-2a80-4ef1-9ef8-52750f95a4d6.md  f29a4adc-8e07-4896-b2b0-c422abbd9842.md  fcb8077c-5da6-42b0-9cc2-ccfdacabc92a.md
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: clippy.yml
assets/: btop.conf
docs/: camera-sync-comparison.md  drift-correction.md
src/: camera.rs  debug.rs  hmd.rs  main.rs  screen_capture.rs  settings.rs  stage.rs  virtual_display.rs
src/hmd/: mod.rs  plugin.rs  tracking.rs
src/modules/: display_modes.rs  grid_layout.rs  mod.rs
src/modules/btop/: mod.rs  plugin.rs
src/modules/camera/: mod.rs  plugin.rs
src/modules/debug/: mod.rs  plugin.rs
src/modules/hmd/: mod.rs  plugin.rs  tracking.rs
src/modules/hmd/tracking/: camera.rs  drift_correction.rs  mod.rs  start_tracking.rs  types.rs
src/modules/screen_capture/: mod.rs  permission.rs  plugin.rs
src/modules/settings/: menu.rs  mod.rs  persistence.rs  plugin.rs  systems.rs
src/modules/stage/: components.rs  display.rs  mod.rs  plugin.rs  systems.rs
src/modules/virtual_display/: mod.rs  plugin.rs
src/modules/webcam_distance/: detection.rs  mod.rs  permission.rs  plugin.rs  types.rs
