[package]
name = "open-space"
version = "0.1.0"
edition = "2021"
description = "Spatial display application using virtual displays and AR glasses"
license = "MIT"
repository = "https://github.com/tupe12334/open-space"

[dependencies]
bevy = "0.15.3"

winit = "0.30.5"
tokio = { version = "1.41.0", features = ["full"] }
core-graphics2 = { version = "0.5.2", default-features = false, features = [
  "display",
  "objc",
  "window",
] }
core-media = { version = "0.7.1", default-features = false, features = [
  "objc",
] }
core-video = { version = "0.5.2", features = ["objc"] }
objc2 = { version = "0.5.2", features = ["relax-sign-encoding"] }
objc2-foundation = { version = "0.2.2", features = [
  "NSArray",
  "NSDictionary",
  "NSError",
  "NSGeometry",
  "NSString",
] }
dispatch2 = "0.1.0"
core-foundation = { version = "0.10.1", default-features = false }
rand = "0.8.5"
libc = "0.2.161"
screen-capture-kit = "0.6.1"
ar-drivers = "0.4.3"
ahrs = "0.8.0"
nalgebra = "0.34"
serde_json = "1"

[dev-dependencies]
cargo-husky = { version = "1", default-features = false, features = ["user-hooks"] }

[workspace]
resolver = "2"

[workspace.lints.clippy]
# Pedantic: catches subtle bugs and enforces idiomatic Rust
pedantic = { level = "warn", priority = -1 }
# Nursery: early detection of newer lint patterns
nursery = { level = "warn", priority = -1 }
# Cargo: Cargo manifest best practices
cargo = { level = "warn", priority = -1 }

# Selected restriction lints (enabling all restriction lints conflicts with pedantic)
dbg_macro = "deny"
empty_enum_variants_with_brackets = "deny"
empty_structs_with_brackets = "deny"
error_impl_error = "deny"
exit = "deny"
float_cmp_const = "deny"
fn_to_numeric_cast_any = "deny"
format_push_string = "deny"
get_unwrap = "deny"
if_then_some_else_none = "deny"
infinite_loop = "deny"
lossy_float_literal = "warn"
mem_forget = "warn"
missing_assert_message = "warn"
mixed_read_write_in_expression = "warn"
mutex_atomic = "warn"
needless_raw_strings = "warn"
pathbuf_init_then_push = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
redundant_type_annotations = "warn"
rest_pat_in_fully_bound_structs = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_add = "warn"
suspicious_xor_used_as_pow = "warn"
tests_outside_test_module = "warn"
try_err = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
verbose_file_reads = "warn"

# Intentionally allowed pedantic/nursery lints with justification:
# This crate heavily uses Bevy and ObjC interop which requires many unsafe casts
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
# Bevy systems require owned params (Res, Query, etc.) by design
needless_pass_by_value = "allow"
# Bevy systems use many parameters by design
too_many_arguments = "allow"
# Long functions are acceptable for setup/init code
too_many_lines = "allow"
# Bevy query types are inherently complex
type_complexity = "allow"
# Module naming follows Bevy plugin conventions
module_name_repetitions = "allow"
# Wildcard imports are idiomatic for bevy::prelude::*
wildcard_imports = "allow"
# Missing docs are acceptable for this application crate
missing_docs_in_private_items = "allow"
# Missing errors doc not applicable for most Bevy system functions
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# multiple_crate_versions is common with large dependency trees like Bevy
multiple_crate_versions = "allow"
# ObjC interop requires unsafe Send/Sync impls with non-Send fields
non_send_fields_in_send_ty = "allow"
# u32 as i32 wrapping is acceptable for small constants
cast_possible_wrap = "allow"
# same_name_method is triggered by ObjC declare_class! macro
same_name_method = "allow"
# cargo_common_metadata fields like keywords/categories are optional for apps
cargo_common_metadata = "allow"
# collection_is_never_read false positive: collections kept alive for side effects
collection_is_never_read = "allow"

[lints]
workspace = true

# Enable optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
